--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
     "passport-jwt": "^4.0.0",
